--- a/dsmm_refs.bib
+++ b/dsmm_refs.bib
@@ -1,5 +1,4 @@
-
-@book{barbu_limnios,
+@Book{barbu_limnios,
   title={Semi-Markov chains and hidden semi-Markov models toward applications: their use in reliability and DNA analysis},
   author={Barbu, Vlad Stefan and Limnios, Nikolaos},
   volume={191},
@@ -8,13 +7,13 @@
 }
 
 
-@article{barbu_semi_reliability,
+@Article{barbu_semi_reliability,
   title={smmR: Semi-Markov Models, Markov Models and Reliability},
   author={Barbu, Vlad Stefan and Berard, Caroline and Cellier, Dominique and Lecocq, Florian and Lothode, Corentin and Sautreuil, Mathilde}
 }
 
 
-@article{smm_package,
+@Article{smm_package,
   title={SMM: An R Package for Estimation and Simulation of Discrete-time semi-Markov Models.},
   author={Barbu, Vlad Stefan and B{\'e}rard, Caroline and Cellier, Dominique and Sautreuil, Mathilde and Vergne, Nicolas},
   journal={R Journal},
@@ -33,10 +32,9 @@
 }
 
 
-@article{drift_polynomial,
+@Article{drift_polynomial,
 url = {https://doi.org/10.2202/1544-6115.1326},
 title = {Drifting Markov Models with Polynomial Drift and Applications to DNA Sequences},
-title = {},
 author = {Nicolas Vergne},
 volume = {7},
 number = {1},
@@ -47,7 +45,7 @@ lastchecked = {2022-10-16}
 }
 
 
-@article{drift_reliability,
+@Article{drift_reliability,
   title={Reliability and survival analysis for drifting Markov models: modeling and estimation},
   author={Barbu, Vlad Stefan and Vergne, Nicolas},
   journal={Methodology and Computing in Applied Probability},
@@ -68,14 +66,14 @@ lastchecked = {2022-10-16}
   }
 
 
-@article{drifting_swimming,
+@Article{drifting_swimming,
   title={Learning the arm-leg coordination in breaststroke swimming: Identifying exploration of movement dynamics with drifting Markov Models},
   author={Komar, John and Seifert, Ludovic and Vergne, Nicolas and Newell, Karl M},
   year={2022}
 }
 
 
-@article{drifting_learning,
+@Article{drifting_learning,
   title={INVESTIGATING INDIVIDUAL PATHWAYS OF LEARNING: MODELLING THE DYNAMICS OF LEARNING WITH DRIFTING MARKOV MODEL},
   author={Komar, John and Vergne, Nicolas and Seifert, Ludovic},
   journal={Universit{\'e} Le Havre Normandie France},
@@ -84,7 +82,7 @@ lastchecked = {2022-10-16}
 }
 
 
-@inproceedings{drifting_conference_paper_career,
+@Inproceedings{drifting_conference_paper_career,
   title={Career-path analysis using drifting Markov models (DMM) and self-organizing maps},
   author={Massoni, S{\'e}bastien and Olteanu, Madalina and Rousset, Patrick},
   booktitle={MASHS},
@@ -93,7 +91,7 @@ lastchecked = {2022-10-16}
 }
 
 
-@article{package_semi_2015,
+@Article{package_semi_2015,
   title={SemiMarkov: An R package for parametric estimation in multi-state semi-Markov models},
   author={Kr{\'o}l, Agnieszka and Saint-Pierre, Philippe},
   journal={Journal of Statistical Software},
@@ -103,7 +101,7 @@ lastchecked = {2022-10-16}
 }
 
 
-@article{package_hidden_2010,
+@Article{package_hidden_2010,
   title={hsmm—An R package for analyzing hidden semi-Markov models},
   author={Bulla, Jan and Bulla, Ingo and Nenadi{\'c}, Oleg},
   journal={Computational Statistics \& Data Analysis},
@@ -115,7 +113,7 @@ lastchecked = {2022-10-16}
 }
 
 
-@article{package_hidden_2011,
+@Article{package_hidden_2011,
   title={Hidden semi markov models for multiple observation sequences: The mhsmm package for R},
   author={O'Connell, Jared and H{\o}jsgaard, S{\o}ren},
   journal={Journal of Statistical Software},
