--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,5 @@
 @Book{barbu_limnios,
-  title={Semi-Markov chains and hidden semi-Markov models toward applications: their use in reliability and DNA analysis},
+  title={Semi-{Markov} chains and hidden semi-Markov models toward applications: their use in reliability and DNA analysis},
   author={Barbu, Vlad Stefan and Limnios, Nikolaos},
   volume={191},
   year={2009},
