--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,5 @@
 @Book{barbu_limnios,
-  title={Semi-{Markov} chains and hidden semi-Markov models toward applications: their use in reliability and DNA analysis},
+  title={Semi-{Markov} chains and hidden semi-{Markov} models toward applications: their use in reliability and DNA analysis},
   author={Barbu, Vlad Stefan and Limnios, Nikolaos},
   volume={191},
   year={2009},
@@ -8,13 +8,13 @@
 
 
 @Article{barbu_semi_reliability,
-  title={smmR: Semi-Markov Models, Markov Models and Reliability},
+  title={smmR: Semi-{Markov} Models, {Markov} Models and Reliability},
   author={Barbu, Vlad Stefan and Berard, Caroline and Cellier, Dominique and Lecocq, Florian and Lothode, Corentin and Sautreuil, Mathilde}
 }
 
 
 @Article{smm_package,
-  title={SMM: An R Package for Estimation and Simulation of Discrete-time semi-Markov Models.},
+  title={SMM: An R Package for Estimation and Simulation of Discrete-time semi-{Markov} Models.},
   author={Barbu, Vlad Stefan and B{\'e}rard, Caroline and Cellier, Dominique and Sautreuil, Mathilde and Vergne, Nicolas},
   journal={R Journal},
   volume={10},
@@ -24,7 +24,7 @@
 
 
 @Manual{smmR_package,
-    title = {smmR: Simulation, Estimation and Reliability of Semi-Markov Models},
+    title = {smmR: Simulation, Estimation and Reliability of Semi-{Markov} Models},
     author = {Vlad Stefan Barbu and Caroline Berard and Dominique Cellier and Florian Lecocq and Corentin Lothode and Mathilde Sautreuil and Nicolas Vergne},
     year = {2021},
     note = {R package version 1.0.3},
@@ -34,7 +34,7 @@
 
 @Article{drift_polynomial,
 url = {https://doi.org/10.2202/1544-6115.1326},
-title = {Drifting Markov Models with Polynomial Drift and Applications to DNA Sequences},
+title = {Drifting {Markov} Models with Polynomial Drift and Applications to DNA Sequences},
 author = {Nicolas Vergne},
 volume = {7},
 number = {1},
@@ -46,7 +46,7 @@ lastchecked = {2022-10-16}
 
 
 @Article{drift_reliability,
-  title={Reliability and survival analysis for drifting Markov models: modeling and estimation},
+  title={Reliability and survival analysis for drifting {Markov} models: modeling and estimation},
   author={Barbu, Vlad Stefan and Vergne, Nicolas},
   journal={Methodology and Computing in Applied Probability},
   volume={21},
@@ -58,7 +58,7 @@ lastchecked = {2022-10-16}
 
 
 @Manual{drimmR_package,
-    title = {drimmR: Estimation, Simulation and Reliability of Drifting Markov Models},
+    title = {drimmR: Estimation, Simulation and Reliability of Drifting {Markov} Models},
     author = {Vlad Stefan Barbu and Corentin Lothode and Alexandre Seiller and Nicolas Vergne},
     year = {2021},
     note = {R package version 1.0.1},
@@ -67,14 +67,14 @@ lastchecked = {2022-10-16}
 
 
 @Article{drifting_swimming,
-  title={Learning the arm-leg coordination in breaststroke swimming: Identifying exploration of movement dynamics with drifting Markov Models},
+  title={Learning the arm-leg coordination in breaststroke swimming: {Identifying} exploration of movement dynamics with drifting {Markov} {Models}},
   author={Komar, John and Seifert, Ludovic and Vergne, Nicolas and Newell, Karl M},
   year={2022}
 }
 
 
 @Article{drifting_learning,
-  title={INVESTIGATING INDIVIDUAL PATHWAYS OF LEARNING: MODELLING THE DYNAMICS OF LEARNING WITH DRIFTING MARKOV MODEL},
+  title={{INVESTIGATING INDIVIDUAL PATHWAYS OF LEARNING: MODELLING THE DYNAMICS OF LEARNING WITH DRIFTING {Markov} MODEL}},
   author={Komar, John and Vergne, Nicolas and Seifert, Ludovic},
   journal={Universit{\'e} Le Havre Normandie France},
   pages={33},
@@ -83,7 +83,7 @@ lastchecked = {2022-10-16}
 
 
 @Inproceedings{drifting_conference_paper_career,
-  title={Career-path analysis using drifting Markov models (DMM) and self-organizing maps},
+  title={Career-path analysis using drifting {Markov} models ({DMM}) and self-organizing maps},
   author={Massoni, S{\'e}bastien and Olteanu, Madalina and Rousset, Patrick},
   booktitle={MASHS},
   pages={xxx},
@@ -92,7 +92,7 @@ lastchecked = {2022-10-16}
 
 
 @Article{package_semi_2015,
-  title={SemiMarkov: An R package for parametric estimation in multi-state semi-Markov models},
+  title={SemiMarkov: An R package for parametric estimation in multi-state semi-{Markov} models},
   author={Kr{\'o}l, Agnieszka and Saint-Pierre, Philippe},
   journal={Journal of Statistical Software},
   volume={66},
@@ -102,7 +102,7 @@ lastchecked = {2022-10-16}
 
 
 @Article{package_hidden_2010,
-  title={hsmm—An R package for analyzing hidden semi-Markov models},
+  title={hsmm—An R package for analyzing hidden semi-{Markov} models},
   author={Bulla, Jan and Bulla, Ingo and Nenadi{\'c}, Oleg},
   journal={Computational Statistics \& Data Analysis},
   volume={54},
@@ -114,7 +114,7 @@ lastchecked = {2022-10-16}
 
 
 @Article{package_hidden_2011,
-  title={Hidden semi markov models for multiple observation sequences: The mhsmm package for R},
+  title={Hidden semi {Markov} models for multiple observation sequences: The mhsmm package for R},
   author={O'Connell, Jared and H{\o}jsgaard, S{\o}ren},
   journal={Journal of Statistical Software},
   volume={39},
