--- a/paper.bib
+++ b/paper.bib
@@ -63,7 +63,7 @@ lastchecked = {2022-10-16}
     year = {2021},
     note = {R package version 1.0.1},
     url = {https://CRAN.R-project.org/package=drimmR},
-  }
+}
 
 
 @Article{drifting_swimming,
@@ -82,42 +82,43 @@ lastchecked = {2022-10-16}
 }
 
 
-@Inproceedings{drifting_conference_paper_career,
-  title={Career-path analysis using drifting {Markov} models ({DMM}) and self-organizing maps},
-  author={Massoni, S{\'e}bastien and Olteanu, Madalina and Rousset, Patrick},
-  booktitle={MASHS},
-  pages={xxx},
-  year={2010}
+@Article{SemiMarkov_package,
+    title = {{SemiMarkov}: An {R} Package for Parametric Estimation in Multi-State Semi-Markov Models},
+    author = {Agnieszka Kr\'{o}l and Philippe Saint-Pierre},
+    journal = {Journal of Statistical Software},
+    year = {2015},
+    volume = {66},
+    number = {6},
+    pages = {1--16},
+    url = {http://www.jstatsoft.org/v66/i06/},
+  }
+
+
+@Manual{HMM_package,
+  title = {HMM: Hidden Markov Models},
+  author = {Scientific Software - Dr. Lin Himmelmann},
+  year = {2022},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=HMM},
 }
 
+  @Manual{HiddenMarkov_package,
+    title = {HiddenMarkov: Hidden Markov Models},
+    author = {David Harte},
+    year = {2021},
+    note = {R package version 1.8-13},
+    organization = {Statistics Research Associates},
+    address = {Wellington},
+    url = {https://www.statsresearch.co.nz/dsh/sslib/},
+  }
 
-@Article{package_semi_2015,
-  title={SemiMarkov: An R package for parametric estimation in multi-state semi-{Markov} models},
-  author={Kr{\'o}l, Agnieszka and Saint-Pierre, Philippe},
-  journal={Journal of Statistical Software},
-  volume={66},
-  pages={1--16},
-  year={2015}
-}
-
-
-@Article{package_hidden_2010,
-  title={hsmm—An R package for analyzing hidden semi-{Markov} models},
-  author={Bulla, Jan and Bulla, Ingo and Nenadi{\'c}, Oleg},
-  journal={Computational Statistics \& Data Analysis},
-  volume={54},
-  number={3},
-  pages={611--619},
-  year={2010},
-  publisher={Elsevier}
-}
-
-
-@Article{package_hidden_2011,
-  title={Hidden semi {Markov} models for multiple observation sequences: The mhsmm package for R},
-  author={O'Connell, Jared and H{\o}jsgaard, S{\o}ren},
-  journal={Journal of Statistical Software},
-  volume={39},
-  pages={1--22},
-  year={2011}
-}
+@Article{mhsmm_package,
+    title = {Hidden Semi Markov Models for Multiple Observation Sequences: The {mhsmm} Package for {R}},
+    author = {Jared O'Connell and Søren Højsgaard},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {39},
+    number = {4},
+    pages = {1--22},
+    url = {http://www.jstatsoft.org/v39/i04/},
+  }
