--- a/paper.bib
+++ b/paper.bib
@@ -9,13 +9,13 @@
 
 @Article{barbu_semi_reliability,
   title={smmR: Semi-{Markov} Models, {Markov} Models and Reliability},
-  author={Barbu, Vlad Stefan and Berard, Caroline and Cellier, Dominique and Lecocq, Florian and Lothode, Corentin and Sautreuil, Mathilde}
+  author={Barbu, Vlad Stefan and Lecocq, Florian and Lothode, Corentin}
 }
 
 
 @Article{smm_package,
   title={SMM: An R Package for Estimation and Simulation of Discrete-time semi-{Markov} Models.},
-  author={Barbu, Vlad Stefan and B{\'e}rard, Caroline and Cellier, Dominique and Sautreuil, Mathilde and Vergne, Nicolas},
+  author={Barbu, Vlad Stefan and Vergne, Nicolas},
   journal={R Journal},
   volume={10},
   number={2},
@@ -25,7 +25,7 @@
 
 @Manual{smmR_package,
     title = {smmR: Simulation, Estimation and Reliability of Semi-{Markov} Models},
-    author = {Vlad Stefan Barbu and Caroline Berard and Dominique Cellier and Florian Lecocq and Corentin Lothode and Mathilde Sautreuil and Nicolas Vergne},
+    author = {Vlad Stefan Barbu and Florian Lecocq and Corentin Lothode and Nicolas Vergne},
     year = {2021},
     note = {R package version 1.0.3},
     url = {https://CRAN.R-project.org/package=smmR},
@@ -59,7 +59,7 @@ lastchecked = {2022-10-16}
 
 @Manual{drimmR_package,
     title = {drimmR: Estimation, Simulation and Reliability of Drifting {Markov} Models},
-    author = {Vlad Stefan Barbu and Corentin Lothode and Alexandre Seiller and Nicolas Vergne},
+    author = {Vlad Stefan Barbu and Corentin Lothode and Nicolas Vergne},
     year = {2021},
     note = {R package version 1.0.1},
     url = {https://CRAN.R-project.org/package=drimmR},
@@ -96,7 +96,8 @@ lastchecked = {2022-10-16}
 
 @Manual{HMM_package,
   title = {HMM: Hidden Markov Models},
-  author = {Scientific Software - Dr. Lin Himmelmann},
+  journal = {Scientific Software}
+  author = {Lin Himmelmann},
   year = {2022},
   note = {R package version 1.0.1},
   url = {https://CRAN.R-project.org/package=HMM},
