joss_paper_final

--- a/paper.bib
+++ b/paper.bib
@@ -96,7 +96,7 @@ lastchecked = {2022-10-16}
 
 @Manual{HMM_package,
   title = {HMM: Hidden Markov Models},
-  journal = {Scientific Software}
+  journal = {Scientific Software},
   author = {Lin Himmelmann},
   year = {2022},
   note = {R package version 1.0.1},
