--- a/paper.bib
+++ b/paper.bib
@@ -3,7 +3,8 @@
   author={Barbu, Vlad Stefan and Limnios, Nikolaos},
   volume={191},
   year={2009},
-  publisher={Springer Science \& Business Media}
+  publisher={Springer Science \& Business Media},
+  url = {https://doi.org/10.1007/978-0-387-73173-5}
 }
 
 
@@ -103,7 +104,7 @@ lastchecked = {2022-10-16}
   url = {https://CRAN.R-project.org/package=HMM},
 }
 
-  @Manual{HiddenMarkov_package,
+@Manual{HiddenMarkov_package,
     title = {HiddenMarkov: Hidden Markov Models},
     author = {David Harte},
     year = {2021},
